--- a/app/src/main/res/layout/activity_question_acitvity.xml
+++ b/app/src/main/res/layout/activity_question_acitvity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ResetPassword"
+    android:background="@drawable/reset_password"
     tools:context=".QuestionAcitvity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
