--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -13,8 +13,8 @@
         android:layout_height="100sp"
         app:srcCompat="@drawable/bheemcash_favicon"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70sp"
-        />
+        android:layout_marginTop="100sp"
+        android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/textView"
@@ -23,10 +23,10 @@
         android:layout_below="@id/logo"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20sp"
-        android:layout_marginLeft="20sp"
-        android:layout_marginTop="20sp"
+        android:layout_marginLeft="15sp"
+        android:layout_marginTop="15sp"
         android:layout_marginEnd="20sp"
-        android:layout_marginRight="20sp"
+        android:layout_marginRight="15sp"
         android:layout_marginBottom="20sp"
         android:text="@string/companyDescription"
         android:textSize="15sp" />
